--- a/src/index.css
+++ b/src/index.css
@@ -81,6 +81,7 @@ body{
   align-items: center;
   justify-content: center;
   margin-bottom: 30px;
+  padding-top: 10px;
 }
 
 .c-player--controls .play-btn {
@@ -109,3 +110,10 @@ body{
   color: #888;
   font-style: 18px;
 }
+
+.seek_bar{
+                width: 0;
+                height: 100%;
+                background-color: rgb(24, 128, 3);
+                border-radius: 30px;
+            }
